fix help text alignment broken by rebase

--- a/scss/_patterns_form-help-text.scss
+++ b/scss/_patterns_form-help-text.scss
@@ -6,5 +6,9 @@
 
     color: $color-mid-dark;
     margin-top: -$sp-unit;
+
+    &.is-tick-element {
+      margin-left: $sph--large + $form-tick-box-size;
+    }
   }
 }
